# KanoopGitMains

./: .gitmodules  CMakeLists.txt  README.md
testprog/: CMakeLists.txt  main.cpp
